Fix h2 size on mobile

--- a/src/components/Homepage/heroSection/heroSectionStyles.css
+++ b/src/components/Homepage/heroSection/heroSectionStyles.css
@@ -108,6 +108,10 @@ a svg {
 		font-size: 32px;
 	}
 
+	.hero-h2 {
+		font-size: 24px;
+	}
+
 	.hero-p {
 		font-size: 14px;
 	}
